--- a/story.html
+++ b/story.html
@@ -6,7 +6,7 @@
     <!-- Created using Storyline 3 - http://www.articulate.com  -->
     <!-- version: 3.8.20838.0 -->
 
-    <title>topatHamlhamaA</title>
+    <title>topatHmalhamaTrgol</title>
     <style>
         body {
             background: #ffffff;
